Added Profile Fragment and Logout with Shared Preferences.

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -84,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
                 android:textSize="15sp"
+                android:textColor="@color/white"
                 android:layout_marginHorizontal="10dp"
                 android:textStyle="bold"
                 android:backgroundTint="@color/btn_color"
@@ -96,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:text="Sign In"
                 android:textSize="15sp"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 android:backgroundTint="@color/btn_color"
                 android:layout_marginHorizontal="10dp"
