--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wave"
+    android:backgroundTint="#0C75C9"
     tools:context=".LoginPage">
 
 
@@ -17,100 +18,139 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:gravity="center"
+        tools:ignore="hardcodedText"
         android:id="@+id/title"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_below="@+id/title">
-
-        <com.google.android.material.textfield.TextInputLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            android:layout_marginHorizontal="10dp"
-            app:boxStrokeErrorColor="#FF1100"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            app:startIconDrawable="@drawable/baseline_email_24"
-            android:hint="Email">
+            android:layout_below="@id/title"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="100dp"
+            app:cardElevation="30dp"
+            android:id="@+id/cardLayout"
+            app:cardCornerRadius="20dp"
+            android:layout_marginBottom="50dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_below="@+id/title">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:inputType="textEmailAddress"
-                android:paddingStart="40dp"
-                android:backgroundTint="@color/white"/>
+                app:endIconMode="clear_text"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                android:layout_marginHorizontal="10dp"
+                app:boxStrokeErrorColor="#FF1100"
+                android:layout_marginTop="50dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                app:startIconDrawable="@drawable/baseline_email_24"
+                android:hint="Email">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="40dp"
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="password_toggle"
-            android:layout_marginHorizontal="10dp"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            android:layout_marginTop="10dp"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            app:startIconDrawable="@drawable/baseline_lock_24"
-            android:hint="Password">
+                    tools:ignore="RtlSymmetry" />
 
-            <com.google.android.material.textfield.TextInputEditText
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:id="@+id/password"
-                android:textColor="@color/white"
-                android:paddingStart="40dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:endIconMode="password_toggle"
+                android:layout_marginHorizontal="10dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                android:layout_marginTop="10dp"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/baseline_lock_24"
+                android:hint="Password">
 
-        </com.google.android.material.textfield.TextInputLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/password"
+                    android:textColor="@color/black"
+                    android:paddingStart="40dp"
+                    android:inputType="textPassword"
+                    android:layout_height="wrap_content"
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
-                android:textSize="15sp"
-                android:textColor="@color/white"
-                android:layout_marginHorizontal="10dp"
-                android:textStyle="bold"
-                android:backgroundTint="@color/btn_color"
-                android:id="@+id/btn_sign_up"
-                tools:ignore="hardcodedText"
-                />
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="Sign In"
-                android:textSize="15sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:backgroundTint="@color/btn_color"
-                android:layout_marginHorizontal="10dp"
-                android:id="@+id/btn_sign_in"
-                tools:ignore="hardcodedText"
-                />
-        </LinearLayout>
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressbar"
-            />
-    </LinearLayout>
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:text="Sign In"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:backgroundTint="@color/btn_color"
+                    android:layout_marginHorizontal="60dp"
+                    android:id="@+id/btn_sign_in"
+                    tools:ignore="hardcodedText"
+                    />
+            </LinearLayout>
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal">
+                   <TextView
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:text="New User?"
+                       tools:ignore="hardcodedText"
+                       android:layout_marginTop="20dp"
+                       android:layout_weight="3"
+                       android:textColor="@color/black"
+                       android:gravity="end"
+                       android:textSize="15sp"
+                       />
+                   <TextView
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_weight="4"
+                       android:text="Register Now"
+                       android:layout_marginTop="20dp"
+                       tools:ignore="RtlSymmetry,hardcodedText"
+                       android:textColor="#0868B5"
+                       android:gravity="start"
+                       android:id="@+id/registerNow"
+                       android:textStyle="bold"
+                       android:paddingStart="10dp"
+                       android:textSize="18sp"
+                       />
+               </LinearLayout>
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:id="@+id/progressbar"
+                    />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+
+
 
 
 
