--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,116 +1,245 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wave"
+    android:backgroundTint="#0C75C9"
     tools:context=".SignUp">
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:text="Sign In"
+        android:text="Sign Up"
         android:textColor="@color/login"
         android:textSize="40sp"
         android:textStyle="bold"
         android:gravity="center"
+        tools:ignore="hardcodedText"
         android:id="@+id/title"
         />
 
-    <LinearLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_below="@+id/title">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            android:layout_marginHorizontal="10dp"
-            app:boxStrokeErrorColor="#FF1100"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            app:startIconDrawable="@drawable/baseline_email_24"
-            android:hint="Email">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:inputType="textEmailAddress"
-                android:paddingStart="40dp"
-                android:backgroundTint="@color/white"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="password_toggle"
-            android:layout_marginHorizontal="10dp"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            android:layout_marginTop="10dp"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            app:startIconDrawable="@drawable/baseline_lock_24"
-            android:hint="Password">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:id="@+id/password"
-                android:textColor="@color/white"
-                android:paddingStart="40dp"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
+        android:layout_below="@id/title"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="80dp"
+        app:cardElevation="30dp"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/cardLayout"
+        app:cardCornerRadius="20dp"
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingVertical="40dp"
+            android:gravity="center"
+            android:layout_below="@+id/title">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/default_profile_image"
+                app:civ_border_color="#FF000000"
+                android:layout_marginBottom="10dp"
+                app:civ_border_width="2dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
-                android:textSize="15sp"
+                app:endIconMode="clear_text"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
                 android:layout_marginHorizontal="10dp"
-                android:textStyle="bold"
-                android:backgroundTint="@color/btn_color"
-                android:id="@+id/btn_sign_up"
-                tools:ignore="hardcodedText"
-                />
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                app:boxStrokeErrorColor="#FF1100"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                app:startIconDrawable="@drawable/baseline_person_24"
+                android:hint="Username">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="40dp"
+
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:backgroundTint="@color/btn_color"
+                app:endIconMode="clear_text"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
                 android:layout_marginHorizontal="10dp"
-                android:id="@+id/btn_sign_in"
-                tools:ignore="hardcodedText"
+                app:boxStrokeErrorColor="#FF1100"
+                android:layout_marginTop="10dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                app:startIconDrawable="@drawable/baseline_email_24"
+                android:hint="Email">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="40dp"
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                android:layout_marginHorizontal="10dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                android:layout_marginTop="10dp"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/baseline_local_phone_24"
+                android:hint="Phone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/phone"
+                    android:textColor="@color/black"
+                    android:paddingStart="40dp"
+                    android:inputType="phone|number"
+                    android:layout_height="wrap_content"
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="password_toggle"
+                android:layout_marginHorizontal="10dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                android:layout_marginTop="10dp"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/baseline_lock_24"
+                android:hint="Password">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/password"
+                    android:textColor="@color/black"
+                    android:paddingStart="40dp"
+                    android:inputType="textPassword"
+                    android:layout_height="wrap_content"
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="password_toggle"
+                android:layout_marginHorizontal="10dp"
+                app:endIconTint="@color/black"
+                app:startIconTint="@color/black"
+                android:layout_marginTop="10dp"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/baseline_lock_24"
+                android:hint="Confirm Password">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/confirm_password"
+                    android:textColor="@color/black"
+                    android:paddingStart="40dp"
+                    android:inputType="textPassword"
+                    android:layout_height="wrap_content"
+                    tools:ignore="RtlSymmetry" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:text="Sign Up"
+                    android:textSize="15sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_marginHorizontal="60dp"
+                    android:backgroundTint="@color/btn_color"
+                    android:id="@+id/btn_upload"
+                    tools:ignore="hardcodedText"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Already have account?"
+                    tools:ignore="hardcodedText"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="7"
+                    android:textColor="@color/black"
+                    android:gravity="end"
+                    android:textSize="15sp"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:text="Login"
+                    android:layout_marginTop="20dp"
+                    tools:ignore="RtlSymmetry,hardcodedText"
+                    android:textColor="#0868B5"
+                    android:gravity="start"
+                    android:id="@+id/registerNow"
+                    android:textStyle="bold"
+                    android:paddingStart="10dp"
+                    android:textSize="18sp"
+                    />
+            </LinearLayout>
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:id="@+id/progressbar"
                 />
         </LinearLayout>
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressbar"
-            />
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 
 
 
 
 </RelativeLayout>
+
+
+</ScrollView>
