--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -7,6 +7,7 @@
     
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
+        android:backgroundTint="#0C75C9"
         android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.Toolbar
