--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#36A6D8"
+    android:background="#FFFFFF"
     tools:context=".Fragments.Profile">
 
     <LinearLayout
@@ -13,139 +13,129 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/sample1"
-            android:layout_marginVertical="30dp"
-            android:layout_gravity="center"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxStrokeColor="@color/white"
-            android:layout_marginVertical="10dp"
-            app:hintTextColor="@color/white"
-            android:layout_marginHorizontal="10dp"
-            app:boxStrokeErrorColor="#FF1100"
-            android:textColorHint="@color/white"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            app:startIconDrawable="@drawable/baseline_person_24"
-            android:hint="Name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:inputType="text"
-                android:paddingStart="40dp"
-                android:backgroundTint="@color/white"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            android:layout_marginHorizontal="10dp"
-            app:boxStrokeErrorColor="#FF1100"
-            android:layout_marginVertical="10dp"
-            android:textColorHint="@color/white"
-            app:endIconTint="@color/white"
-            app:startIconTint="@color/white"
-            app:startIconDrawable="@drawable/baseline_person_24"
-            android:hint="Phone">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:inputType="phone|number"
-                android:paddingStart="40dp"
-                android:backgroundTint="@color/white"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxStrokeColor="@color/white"
-            app:hintTextColor="@color/white"
-            android:layout_marginHorizontal="10dp"
-            app:boxStrokeErrorColor="#FF1100"
-            android:layout_marginVertical="10dp"
-            app:endIconTint="@color/white"
-            android:textColorHint="@color/white"
-            app:startIconTint="@color/white"
-            app:startIconDrawable="@drawable/baseline_person_24"
-            android:hint="Fees">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fees"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:inputType="phone|numberDecimal"
-                android:paddingStart="40dp"
-                android:backgroundTint="@color/white"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/default_profile_image"
+            app:civ_border_color="#FF000000"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_gravity="center"
+            app:civ_border_width="2dp" />
 
-            <RadioButton
-                android:id="@+id/radioButton1"
-                android:layout_width="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_height="wrap_content"
-                android:text="Male" />
 
-            <RadioButton
-                android:id="@+id/radioButton2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:text="Female" />
-
-        </RadioGroup>
-
-        <Button
+        <TextView
             android:layout_width="match_parent"
-           android:layout_marginTop="20dp"
             android:layout_height="wrap_content"
-            android:text="Upload"
-            android:textSize="15sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:backgroundTint="@color/btn_color"
-            android:layout_marginHorizontal="10dp"
-            android:id="@+id/btn_upload"
-            tools:ignore="hardcodedText"
-            />
+            android:id="@+id/title_username"
+            android:hint="Username"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:layout_marginBottom="60dp"
+            android:layout_marginTop="17dp"
+            tools:ignore="HardcodedText" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            app:cardElevation="30dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginHorizontal="15dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name:"
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Username"
+                    android:layout_marginStart="35dp"
+                    android:textColorHint="@color/black"
+                    android:id="@+id/username"
+                    tools:ignore="HardcodedText" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Phone:"
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Phone"
+                    android:layout_marginStart="35dp"
+                    android:textColorHint="@color/black"
+                    android:id="@+id/phone"
+                    tools:ignore="HardcodedText" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Email:"
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
+                    android:layout_marginStart="35dp"
+                    android:textColorHint="@color/black"
+                    android:id="@+id/email"
+                    tools:ignore="HardcodedText" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Password:"
+                    android:textColor="@color/black"
+                    tools:ignore="HardcodedText" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:layout_marginStart="35dp"
+                    android:textColorHint="@color/black"
+                    android:id="@+id/password"
+                    tools:ignore="HardcodedText" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="10dp">
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upload"
+                android:backgroundTint="#004D8A"
+                android:id="@+id/btn_upload"
+                android:layout_marginHorizontal="60dp"
+                android:textColor="@color/white"
+                tools:ignore="HardcodedText" />
+
+        </LinearLayout>
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/progressbar"
+                    />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
-
-
-
-
-
 
 </ScrollView>
